Fix CursorOffsetCalculator when path is empty